fixed overflow on about container and started configuring loadedContent for storing data

--- a/src/components/Profile/ProfileAbout/AboutContent/ContentShared/ContentEntry.css
+++ b/src/components/Profile/ProfileAbout/AboutContent/ContentShared/ContentEntry.css
@@ -1,23 +1,59 @@
 
 .Entry {
     display:flex;
-    justify-content: left;
+    flex-flow: row;
+    justify-content: center;
     align-content: center;
-    height: 30px;
-    width: 200px;
-    margin: 10px 0 0 0;
+    height: 40px;
+    width: 100%;
+    margin-top: 15px;
     padding: 3px;
 }
+
 
 .Icon {
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
-    height: 100%;
-    width: 50px;
+    height: 70%;
+    width: 75px;
     padding: 0;
+    margin-right: 7px;
 }
 
-.Entry span {
-    margin: 0 8px;
-    padding: 3px;
+.Text {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
 }
+
+
+.MainText {
+
+}
+
+.SubText {
+    color: #878787;
+    font-size: 13px;
+    font-weight: 100;
+}
+
+.Icons {
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    margin-left: auto;
+}
+
+.Share {
+    cursor: pointer;
+}
+
+.Edit {
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTLpejdxcDc5uhxm7_dVUxrYtN0aoHZcUJgsw&usqp=CAU");
+    cursor: pointer;
+}
+
+
+
+
