--- a/src/components/Profile/ProfileAbout/ProfileAbout.css
+++ b/src/components/Profile/ProfileAbout/ProfileAbout.css
@@ -6,15 +6,19 @@
     border-radius: 10px;
     box-shadow: 0 1px 1px 1px rgba(0,0,0,0.1);
     display: flex;
+    align-content: stretch;
+    overflow: auto;
 }
 
 .IndexContainer {
-    display:inline-block;
-    height: 100%;
-    width: 300px;
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-self: flex-start;
+    max-width: 300px;
+    min-width: 300px;
     margin: 0;
     padding: 7px;
-    border-right: 1px solid #cccccc;
 }
 
 .IndexContainer h2 {
@@ -56,14 +60,29 @@
     text-decoration: none;
 }
 
+/*.Break {*/
+/*    width: 1px;*/
+/*    height: 100%;*/
+/*    background: #cccccc;*/
+/*}*/
+
 .LoadedContent {
-    display: inline-block;
+    display: flex;
+    flex-flow: column;
+    flex-grow: 2;
     height: 100%;
-    width: 50%;
     margin: 0;
-    padding: 5px;
+    padding: 20px;
+    border-left: 1px solid #cccccc;
 }
+
+/*@media (max-width: 1100px) {*/
+/*    .LoadedContent {*/
+/*        width: 40%*/
+/*    }*/
+/*}*/
 
 .LoadedContent h3 {
     margin: 12px 10px;
 }
+
